--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -20,6 +20,7 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     gap: $spacing-md;
+    font-family: $font-monospace;
 
     ul {
       display: flex;
@@ -60,7 +61,7 @@
 @media (max-width: $mobile-breakpoint) {
   .site-navbar {
     flex-direction: row;
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
 
     h1 {
@@ -71,7 +72,7 @@
     nav {
       width: 100%;
       margin-left: 0;
-      justify-content: center;
+      justify-content: right;
 
       ul {
         justify-content: center;
